--- a/src/PrismCase/Case2/Views/Main1.xaml
+++ b/src/PrismCase/Case2/Views/Main1.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="Case2.Views.MainWindow"
+﻿<UserControl x:Class="Case2.Views.Main1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Case2"
         xmlns:prism="http://prismlibrary.com/"
-        WindowStartupLocation="CenterScreen"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="{Binding WindowTitle}" 
-        Height="450" Width="800">
-    <Grid>
-        <ContentControl prism:RegionManager.RegionName="MainRegion"/>
-    </Grid>
-</Window>
+             Background="CadetBlue"
+        Height="400" Width="800">
+    <StackPanel>
+        <TextBlock Text="Main1"></TextBlock>
+        <Button Command="{Binding ExitCommand}" Content="退  出" Width="100" Height="30" />
+    </StackPanel>
+</UserControl>
