--- a/src/PrismCase/Case2/Views/Shell1.xaml
+++ b/src/PrismCase/Case2/Views/Shell1.xaml
@@ -21,6 +21,6 @@
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="MainContentRegion"/>
+        <ContentControl prism:RegionManager.RegionName="ShellRegion"/>
     </Grid>
 </Window>
